tests/duarouter/alternatives/style1_input/errors/vehicle/vehicle_id_missing/errors.duarouter
Error: Attribute 'id' is missing in definition of a vehicle.
Error: Invalid vehicle id ''.
Quitting (on error).
